Deployment_Backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
  spec:
    containers:
      - name: backend
        image: myacr69984123.azurecr.io/backend
        resources:
            limits:
              cpu: "1"
            requests:
              cpu: "500m"
        ports:
        - containerPort: 5000
