Deployment_Frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
  spec:
    containers:
      - name: frontend
        image: myacr69984123.azurecr.io/frontend
        resources:
            limits:
              cpu: "1"
            requests:
              cpu: "500m"
        ports:
        - containerPort: 80
